2008-04-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview-zip.in: zip style schemes and fix docs dir.

2008-04-25  Juerg Billeter  <j@bitron.ch>

	* gtksourceview/language-specs/vala.lang: update keyword list to
	match Vala 0.3.1

2008-04-13  Armin Burgmeier  <armin@arbur.net>

	* gtksourceview/gtksourceundomanager.c
	(gtk_source_undo_manager_add_action),
	(gtk_source_undo_manager_insert_text_handler): Handle insertion of
	non-null-terminated strings correctly.

2008-04-11  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/octave.lang: corrected
	non-existent style reference (#527484).

2008-04-09  Yevgen Muntyan  <muntyan@tamu.edu>

	gtksourceview depends on gtk-2.12 now, so it will not be
	built with glib older than 2.14, so pcre stuff may go now.

	* configure.ac:
	* gtksourceview/Makefile.am:
	* docs/reference/Makefile.am: removed regex stuff.

	* acinclude.m4:
	* gtksourceview/regex: deleted.

2008-04-09  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/python.lang: def:line-continue
	is not needed in the main context.
	* gtksourceview/language-specs/sh.lang: 'for' loops work
	without 'in' too.
	* gtksourceview/language-specs/yacc.lang: prettified.

=== gtksourceview 2.2.1 ===

2008-04-07  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.2.1

2008-04-05  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourceview.c (gtk_source_view_class_init): add
	keybindings for move_viewport. You can now scroll one line up/down,
	one page up/down and to the beginning/end of the document without moving
	the cursor (use Shit + Alt + Up|Down|PageUp|PageDown|Home|End).

2008-04-05  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/python.lang: fix line-continue
	in double quoted strings. Bug #525751.

2008-03-30  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c: make Alt+up/down move the current
	or selected line in the buffer.
